--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -104,3 +104,15 @@ h1{
   margin-top: 10px;
   text-align: center
 }
+
+.newsletter-section{
+  padding: 100px 50px;
+  background: #111c2d;
+  color: #fff;
+  margin-top: 80px;
+}
+
+.newsletter-title{
+  font-size: 40px;
+  text-align: center;
+}
